# ErlViz

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE_SUMMARY.md  NOTICE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  start_erlviz.bat  start_erlviz.sh  test_installation.py
erlviz/: __init__.py
erlviz/core/: analyzer.py  documentation_generator.py  erlviz.py  graph_generator.py  repository_manager.py
erlviz/gui/: __init__.py  main_window.py
examples/: README.md
examples/cowboy_analysis/: README.md
examples/cowboy_analysis/docs/: README.md  api.html  api.md  behaviors.html  behaviors.md  communication.html  communication.md  dependencies.html  dependencies.md  modules.html  modules.md  overview.html
